duplicati-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: duplicati
  labels:
    app: duplicati
    part-of: duplicati
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duplicati
      part-of: duplicati
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: duplicati
        part-of: duplicati
    spec:
      containers:
      - name: duplicati
        image: lscr.io/linuxserver/duplicati:2.0.6
        ports:
        - name: duplicati
          containerPort: 8200
        volumeMounts:
        - name: duplicati
          mountPath: /config
        - name: sources
          mountPath: /sources
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources:
          limits:
            memory: 300Mi
          requests:
            memory: 200Mi
        readinessProbe:
          tcpSocket:
            port: duplicati
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: duplicati
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: duplicati
        persistentVolumeClaim:
          claimName: duplicati
      - name: sources
        persistentVolumeClaim:
          claimName: sources
