duplicati-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
spec:
  selector:
    app: duplicati
    part-of: duplicati
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: duplicati
